Fixing word wrap issue.

--- a/css/styles.less
+++ b/css/styles.less
@@ -205,6 +205,7 @@
 			.tse-li-inner {
 				display: inline-block;
 				font-size: 15px;
+				word-break: break-word;
 			}
 
 			&.tse-see-more-link {
